Add logic to cascade cumulative total to subsequent accruals based on cumulative total of accrual prior to time entry date (AKA reference date)